Prevent collapsed lists from grabbing focus

--- a/UI/src/css/organisms/o-select-custom.css
+++ b/UI/src/css/organisms/o-select-custom.css
@@ -6,6 +6,7 @@
         block-size: 0;
         display: block;
         opacity: 0;
+        pointer-events: none;
         position: absolute;
         width: 100%;
         z-index: 1;
@@ -20,6 +21,7 @@
             block-size: auto;
             margin-block-start: -1px;
             opacity: 1;
+            pointer-events: all;
         }
 
         :where(.a-input-combobox, .a-input-dropdown) {
